--- a/src/app/poke-detail/poke-detail.component.css
+++ b/src/app/poke-detail/poke-detail.component.css
@@ -1,51 +1,103 @@
 .pokemon-card {
-    width: 230px;
-    margin : 0 auto;
-    height: 350px;
-    border: 4px solid black;
+    width: 400px;
+    margin: 0 auto;
+    margin-top :4%;
+    height: 350x;
+    border: 4px solid rgba(255, 255, 255, 0.5);
     border-radius: 25px;
     padding: 10px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #3b4cca;
+    flex-direction: row; 
+    background-color: #f5f5f5;
+    transition: background-color 0.3s ease-in-out;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+    transform: scale(1.2); 
 }
 
-/* Section pour l'image du Pokémon */
-.pokemon-image {
-    flex: 0;
+
+.pokemon-image-section {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-bottom: 2px solid black;
-    padding-bottom: 10px;
+    width: 50%; 
 }
 
-.pokemon-image img {
-    width: 180px;
-    height: auto;
-    top: -20xp;
+.pokemon-image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.pokemon-name {
-    text-align: center;
+.pokemon-card img {
+    width: 100px; 
+    border: 5px solid rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); 
+    transition: transform 0.2s ease-in-out;
+    background: linear-gradient(80deg, #f5f5f5, #e2e2e2);
+}
+
+.pokemon-card img:hover {
+    transform: scale(1.2); 
+}
+
+.pokemon-name { 
+    font-family: 'Fredoka One', sans-serif;
+    font-size: 1.2em; 
     font-weight: bold;
-    color : #FFFFFF
+    color: #333;
+    margin-top: 10px;
+    text-transform: capitalize;
 }
+
 
 .pokemon-details {
-    margin-top: -30px;
+    width: 50%; 
     display: flex;
-    justify-content: space-between; 
-    text-align: left;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 10px;
+    text-align: left; 
+}
+
+.pokemon-stat {
+    margin-bottom: 5px;
+}
+
+.pokemon-stat .label {
+    font-weight: bold;
+    color: #333;
     font-size: 0.9em;
-    color : #FFFFFF
 }
 
-
-.pokemon-abilities {
-    padding-left: 30px; 
+.pokemon-stat .value {
+    color: #333;
+    font-size: 0.9em;
+    margin-bottom: 1.5%;
 }
 
+.prev-button, .next-button {
+    background: none;
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #0f0101;
+    transition: color 0.3s ease;
+    z-index: 10;
+    position: absolute;
+}
 
+.prev-button {
+    left: -30px;
+}
+
+.next-button {
+    right: -30px;
+}
