--- a/src/app/poke-detail/poke-detail.component.html
+++ b/src/app/poke-detail/poke-detail.component.html
@@ -1,24 +1,34 @@
-<div *ngIf="detail" class="pokemon-card">
-
-  <div class="pokemon-image">
+<div *ngIf="detail" class="pokemon-card" [ngStyle]="{'background-color': getBackgroundColor()}">
+  <div class="pokemon-image-section">
+    <div class="pokemon-image">
       <img src= {{detail.sprites.front_default}} alt="Image du Pokémon" >
-      <div class="pokemon-name">{{ detail.name}}</div>
+      <button class="prev-button" (click)="prevPokemon()">❮</button>
+      <button class="next-button" (click)="nextPokemon()">❯</button>
+    </div>
+    <div class="pokemon-name">{{ detail.name}}</div>
   </div>
 
-  <div class="pokemon-details">
-    <div style="text-align: center;">
-        Poids: <br> {{detail.height}}
+    <div class="pokemon-details">
+      <div class="pokemon-stat">
+        <span class="label">Poids: </span>
+        <span class="value">{{detail.weight}} kg</span>
     </div>
-    <div style="text-align: center;">
-        Taille: <br>{{detail.weight}}
+    <div class="pokemon-stat">
+        <span class="label">Taille: </span>
+        <span class="value">{{detail.height}} cm</span>
     </div>
-    <div>
-        Caractéristiques: <br>
-    <ul class="pokemon-abilities">
-      <li *ngFor="let ability of detail.abilities">
-        {{ ability.ability.name }}
-      </li>
-    </ul>
+    <div class="pokemon-stat">
+        <span class="label">Caractéristiques: </span>
+        <span class="value" *ngFor="let ability of detail.abilities">
+          {{ ability.ability.name }}
+        </span>
+    </div>
+    <div class="pokemon-stat">
+        <span class="label">Type: </span>
+        <span  class="value" *ngFor="let type of detail.types">
+          {{ type.type.name }}
+        </span>
+    </div>
   </div>
   
- 
+</div>
